	- Fixed #251: Defect - OldConfig uninitialised on fresh install
	- Fixed #253: Defect - When domain backups are disable there should not be warning emails
	- Fixed #255: Defect - Hide support feature menu item at user level
	- Fixed #259: Cosmetics - Different style for input and select elements
	- Fixed #260: Cosmetics - Move app installer menu items to different section
	- Fixed #263: Defect - Unable to delete htusers && htgroups
	- Fixed #264: Defect - PHP Editor not available
	- Fixed #265: Defect - Disabled feature can not be enabled
	- Fixed #267: Defect - mod_cband configurations are not removed
	- Fixed #269: Defect - Reseller can´t edit php.ini settings for costumer
	- Fixed #270: Defect - Users Can´t acces domain overview
	- Fixed #271: Enhancement - Do not enforce session reuse for FTP over SSL (Tx Cube)
	- Fixed #272: Task - Update postfix's master.cf
	- Fixed #275: Defect - Service status always down when using ipv6 as base ip
	- Fixed #276: Defect - proftpd can´t resolv hostname when using ipv6 as base ip
	- Fixed #278: Defect - Possible corruption of postfix's domain configuration
	- Fixed #279: Defect - Installer should not fail when we are using another webmail
	- Fixed #286: Defect - Error by update
	- Fixed #287: Update - phpMyAdmin 3.4.8 released
	- Fixed #289: Defect - Ubuntu update error without end
	- Fixed #292: Feature - Layout color chooser
	- Fixed #294: Defect - Notice: Undefined index: user_id...

-------------------------------------------------------------------------------------
i-MSCP 1.0.1.5 (beta 5)
-------------------------------------------------------------------------------------
2011-10-25: Torsten Widmann
	- RELEASE i-MSCP 1.0.1.5 (Beta 5)

Features / Enhancements:

	ENGINE:
		Core:
			- Added PHP directives editor
			- Added support for Dovecot
			- Added IPv6 support
			- Engine rewrite including the following new features:
				- Ability to turn off one or many services/servers such as Apache,
				  Bind9, Postfix...